tests/fixtures/invalid/pow_str_bytes_list.py
# Cannot call pow() with Str, Bytes, List[int]
x = pow("hello", b"hello", [1, 2, 3])
